test/test-files/analyzer/generics/error-not-in-template1/exception.out
Semantic error in : ./test-files/analyzer/generics/error-not-in-template1/source.spice:4:16:
Generic type not contained in template: Generic arg type not included in function template

4  f<T> getDyn<T>(T a1, U a2) {
                  ^^^^^^^^^^